--- a/visualisation.qmd
+++ b/visualisation.qmd
@@ -334,6 +334,7 @@ One of the problems with presenting a count of bat passes observed in the UK is 
 library(tidyverse) # Data Science packages - see https://www.tidyverse.org/
 library(broman) # useful add_commas function - 
 # see https://cran.r-project.org/web/packages/broman/index.html
+library(glue) # for joining text and variables
 library(ggrepel) # for tidy graph labels
 
 
@@ -380,13 +381,13 @@ bat_colours_sci <- c(
 ###
 
 
-graph_data <- statics %>%
+graph_data <- statics %>% #statics is a bat survey data set from the iBats package
   group_by(Species) %>%
   count() %>%
   # Add a graph species label; commas added with library(broman)
   mutate(
     total = add_commas(n),
-    label = stringr::str_c(Species, ": ", total)
+    label = glue("{Species}: {total}")
   )
 
 
@@ -485,7 +486,7 @@ bat_colours_sci <- c(
 ###
 
 
-graph_data <- statics %>%
+graph_data <- statics %>% #statics is a bat survey data set from the iBats package
   group_by(Species, Description) %>%
   tally()
 
@@ -518,7 +519,28 @@ ggplot(graph_data, aes(area = n, fill = Species, label = Species, subgroup = Des
 #| warning: false
 #| fig.height: 7
 
-# Add data and time information to the statics data using the iBats::date_time_info
+### Libraries Used 
+library(tidyverse) # Data Science packages - see https://www.tidyverse.org/
+library(treemapify) # extension to ggplot for plotting treemaps - 
+# see https://cran.r-project.org/web/packages/treemapify/vignettes/introduction-to-treemapify.html
+library(ggthemes) # for colour pallet "Tableau 10"
+
+# Install devtools if not installed 
+# devtools is used to install the iBats package from GitHub
+if(!require(devtools)){
+  install.packages("devtools")
+}
+
+# If iBats not installed load from Github
+if(!require(iBats)){
+  devtools::install_github("Nattereri/iBats")
+}
+library(iBats)
+
+###
+
+
+# Add data and time information to the iBats statics bat survey data set using the iBats::date_time_info
 statics_plus <- iBats::date_time_info(statics)
 
 graph_data <- statics_plus %>%
@@ -527,7 +549,7 @@ graph_data <- statics_plus %>%
 
 
 ggplot(graph_data, aes(area = n, fill = Month, label = Species, subgroup = Month)) +
-  scale_fill_tableau(palette = "Tableau 10") + # library(ggthemes)
+  scale_fill_tableau(palette = "Tableau 10") + # 
   geom_treemap(colour = "white", size = 2, alpha = 0.9) +
   geom_treemap_subgroup_border(colour = "black", size = 5, alpha = 0.9) +
   geom_treemap_subgroup_text(
