--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ title: "About"
 
 **Reporting Bat Survey Data** compliments the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition. Unlike the guidelines it has the R code making the analysis; which can be copied and used.
 
-These web pages are written by Steve Markham, Director and Data Scientist at *Marquis & Lord Ltd.* Over my 39 year career I have developed and applied software applications to water management and more recently, the last 15 years; applied *data science* to a wide range of projects using the R software environment. I have held a Natural England Roost Visitors Licence since 1997, undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021. I have been on the editorial board of all the editions of the Bat Survey Guidelines[^1], encouraging ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats!
+These web pages are written by Steve Markham, Director and Data Scientist at *Marquis & Lord Ltd.* Over my 39 year career I have developed and used software applications in water management and more recently, the last 15 years; applied *data science* to a wide range of projects using the R software environment. I have held a Natural England Roost Visitors Licence since 1997, undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021. I have been on the editorial board of all the editions of the Bat Survey Guidelines[^1], encouraging ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats!
 
 [^1]: the current version of the Bat Survey Guidelines can be found here: <https://www.bats.org.uk/resources/guidance-for-professionals/bat-surveys-for-professional-ecologists-good-practice-guidelines-3rd-edition>
 
