--- a/reporting.qmd
+++ b/reporting.qmd
@@ -19,9 +19,45 @@ library(glue)
 
 ```
 
-A full bat survey report produced, ***with one mouse click***, from sound analysis data (i.e after identifying the bat detector calls to species or genus with sound analysis). _One click reporting_ is achieved through literate programming [@knuth84]; a procedure of mixing code and descriptive writing, in order to undertake and explain data analysis simultaneously in the same document.  
+A full bat survey report produced, ***with one mouse click***, from sound analysis data (i.e. after identifying the bat detector calls to species or genus with sound analysis). _One click_ reporting is achieved through literate programming [@knuth84]; a procedure of mixing code and descriptive writing, in order to undertake and explain data analysis simultaneously in the same document. This is an efficient practice of workflow! 
 
-The first few rows of some bat survey data, post sound analysis, is shown in @tbl-surveydata; this is from of the `statics` data in the `iBats` package, it is _tidy_ data and has the minimum columns for undertaking effective analysis:
+
+![Workflow In Practice](Images/workflow.png)
+
+
+
+
+## Why Do This?
+
+The advantages of this approach to bat data science are appreciable:
+
+1. Workflow
+    i) Reduces (and can eliminate) any copy and paste activity
+    ii) Reports are easily created (_one click_) with new data or updated with revised data 
+    iii) The time and effort producing reports can be reduced by several orders of magnitude! 
+2. Reproducible
+    i) The report is reproducible by yourself (and others[^2]); convenient when returning to a project after many months or years!  
+3. Open Source
+    i) The Quarto or R Markdown file, the literate program document, is simple text that can be edited with any text editor as well as user friendly integrated development environments like RStudio[^4].  
+    ii) The software[^3] which reads the literate program document and makes the report in: Word, PDF, PowerPoint or Dashboard are open source and free to use. 
+
+[^2]: the exact results can be reproduced if given access to the original data and Quarto® document containing the literate programming text of code and descriptive writing.
+
+[^3]: e.g. R <https://www.r-project.org/>, Python <https://www.python.org/>, R Markdown <https://rmarkdown.rstudio.com/>, Quarto® <https://quarto.org/>, RStudio <https://posit.co/>, Jupyter <https://jupyter.org/>.
+
+
+[^4]: RStudio is now known as Posit <https://posit.co/>; and now embraces R and Python.  
+
+What's the disadvantage?
+
+1. Coding
+    i)  The literate program document requires coding skills to write (these web pages are designed to help with the coding).
+    ii) Coding skills in ecology are generally underdeveloped (although university education of ecology is increasingly taking a coding approach to data science)
+
+
+## Bat Report from Tidy Data
+
+The first few rows of bat survey data, post sound analysis, is shown in @tbl-surveydata; this is from of the `statics` data in the `iBats` package, it is _tidy_ data and has the minimum columns for undertaking effective analysis:
 
 -   Description
 -   DateTime
@@ -31,7 +67,7 @@ The first few rows of some bat survey data, post sound analysis, is shown in @tb
 
 The `r nrBats <- add_commas(nrow(statics)); nrBats` rows in the `statics` data is used here to demonstrate literate programming with Quarto®[^1].
 
-[^1]: Quarto® the next generation of R Markdown.
+[^1]: Quarto® is seen as the next generation of R Markdown (and is more integrated with Python).
 
 ```{r}
 #| label: tbl-surveydata
@@ -58,17 +94,3 @@ gt(head(surveydata, n = 10L)) %>%
   )
 ```
 
-
-## Why Do This?
-
-The advantages of this approach to bat data science are appreciable:
-
-1. Workflow
-    i) Reduces (and can eliminate) any copy and paste activity
-    ii) Reports are easily created (_one click_) with new data or updated with revised data 
-2. Reproducible
-    i) The report is reproducible by yourself (and others[^2]); convenient when returning to a project after many months or years!  
-
-[^2]: the exact results can be reproduced if given access to the original data and Quarto® document containing the literate programming text of code and descriptive writing.
-
-What's the disadvantage?
